objects/Offer_sdo__c.object
<CustomObject>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Image__c</fullName>
        <formula>IMAGE( Product__r.purl__c , &quot;No Image&quot;, 30, 30)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Offers</relationshipLabel>
        <relationshipName>Offers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Recommended_Product_Image__c</fullName>
        <formula>IMAGE( Recommended_Product__r.purl__c , &quot;No Image&quot;, 30, 30)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Recommended Product Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recommended_Product_Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>When the Recommendation Parent Product is viewed in the Catalog, the product in the Product field above will be recommended.</inlineHelpText>
        <label>Recommended Product Parent</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Recommended Products</relationshipLabel>
        <relationshipName>Offers1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Recommended_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recommended Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Recommendations (Recommended Product)</relationshipLabel>
        <relationshipName>Offers_Recommendations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Offers &amp; Recommendations</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Offers</fullName>
        <columns>NAME</columns>
        <columns>Product__c</columns>
        <columns>Product_Image__c</columns>
        <columns>Price__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Offer_sdo__c.Offer</value>
        </filters>
        <label>All Offers</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Offer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Offers &amp; Recommendations</pluralLabel>
    <recordTypes>
        <fullName>Offer</fullName>
        <active>true</active>
        <label>Offer</label>
    </recordTypes>
    <recordTypes>
        <fullName>Recommended_Products</fullName>
        <active>true</active>
        <description>Used for setting up Product Recommendations for the Catalog</description>
        <label>Recommended Products</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>